--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         </div>
       </div>
 
-      <div class="container" style="background-image: url(images/day8.png);">
+      <div class="container" style="background-image: url(images/P-8_Portfolio.png);">
         <div class="box1">
             <h3>Project 8</h3>
         </div>
         <div class="box2">
-          <h1>Wave animation login</h1>
-          <span class="btn"><a href="projects/Day 8_Wave_animation_login_page/index.html"  target="_blank">Live Demo</a></span>
+          <h1>Portfolio</h1>
+          <span class="btn"><a href="My-JS-Project/Portfolio/index.html"  target="_blank">Live Demo</a></span>
         </div>
       </div>
 
