--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         </div>
       </div>
 
-      <div class="container" style="background-image: url(images/day9.png);">
+      <div class="container" style="background-image: url(images/P-9_DigitalClock.png);">
         <div class="box1">
             <h3>Project 9</h3>
         </div>
         <div class="box2">
-          <h1>Wave animation login</h1>
-          <span class="btn"><a href="projects/Day 9_sound_board/index.html"  target="_blank">Live Demo</a></span>
+          <h1>Digital Clock</h1>
+          <span class="btn"><a href="My-JS-Project/P9-DigitaClock/index.html"  target="_blank">Live Demo</a></span>
         </div>
       </div>
 
@@ -107,8 +107,8 @@
             <h3>Project 10</h3>
         </div>
         <div class="box2">
-          <h1>Dad joke</h1>
-          <span class="btn"><a href="projects/Day 10_Dad_jokes/index.html"  target="_blank">Live Demo</a></span>
+          <h1>dfsdf</h1>
+          <span class="btn"><a href="proje"  target="_blank">Live Demo</a></span>
         </div>
       </div>
 
