--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 
       <div class="container" style="background-image: url(images/P-10_subscribeForm.png);">
         <div class="box1">
-            <h3>Email-Subscribe Form</h3>
+            <h3>Project 10</h3>
         </div>
         <div class="box2">
-          <h1>dfsdf</h1>
+          <h1>Email-Subscribe Form</h1>
           <span class="btn"><a href="My-JS-Project/P10-EmailForm/index.html"  target="_blank">Live Demo</a></span>
         </div>
       </div>
