--- a/My-JS-Project/P11-SelectMenu/index.html
+++ b/My-JS-Project/P11-SelectMenu/index.html
@@ -11,20 +11,31 @@
       <div class="selector">
         <div id="selectField">
           <p id="selectText">Select Social Media</p>
-          <img src="down-arrow.png" id="arrowIcon" />
+          <img
+            src="/My-JS-Project/P11-SelectMenu/img/down-arrow.png"
+            id="arrowIcon"
+          />
         </div>
         <ul id="list" class="hide">
           <li class="options">
+            <img src="/My-JS-Project/P11-SelectMenu/img/facebook (2).png" />
             <p>Facebook</p>
           </li>
           <li class="options">
+            <img src="/My-JS-Project/P11-SelectMenu/img/instagram.png" />
             <p>Instagram</p>
           </li>
           <li class="options">
+            <img src="/My-JS-Project/P11-SelectMenu/img/social.png" />
             <p>Whatsapp</p>
           </li>
           <li class="options">
-            <p>Twitter</p>
+            <img src="/My-JS-Project/P11-SelectMenu/img/linkedin.png" />
+            <p>LinkedIn</p>
+          </li>
+          <li class="options">
+            <img src="/My-JS-Project/P11-SelectMenu/img/youtube.png" />
+            <p>Youtube</p>
           </li>
         </ul>
       </div>
