--- a/index.html
+++ b/index.html
@@ -112,23 +112,23 @@
         </div>
       </div>
 
-      <div class="container" style="background-image: url(images/day11.png);">
+      <div class="container" style="background-image: url(images/P-11_SelectMenu.png);">
         <div class="box1">
             <h3>Project 11</h3>
         </div>
         <div class="box2">
-          <h1>Event keyboard</h1>
-          <span class="btn"><a href="projects/Day 11_event_keyboard/index.html"  target="_blank">Live Demo</a></span>
+          <h1>Select Menu</h1>
+          <span class="btn"><a href="/My-JS-Project/P11-SelectMenu/index.html"  target="_blank">Live Demo</a></span>
         </div>
       </div>
 
-      <div class="container" style="background-image: url(images/day12.png);">
+      <div class="container" style="background-image: url(images/P-12_MiniCalender.png);">
         <div class="box1">
             <h3>Project 12 </h3>
         </div>
         <div class="box2">
-           <h1>FAQ Boxes</h1>
-        <span class="btn"><a href="projects/Day 12_FAQ_boxes/index.html"   target="_blank">Live Demo</a></span>
+           <h1>Mini Calendder</h1>
+        <span class="btn"><a href="/My-JS-Project/P12-MiniCalender/Index.html"   target="_blank">Live Demo</a></span>
         </div>
       </div>
 
