--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
         </div>
       </div>
 
-      <div class="container" style="background-image: url(images/day13.png);">
+      <div class="container" style="background-image: url(images/P-13_CoffeShopMenu.png);">
         <div class="box1">
             <h3>Project 13</h3>
         </div>
         <div class="box2">
-          <h1>Random choice picker</h1>
-          <span class="btn"><a href="projects/Day 13_Random_choice_picker/index.html"  target="_blank">Live Demo</a></span>
+          <h1>CoffeShopMenu</h1>
+          <span class="btn"><a href="/My-JS-Project/P13-CoffeShopeMenu/index.html"  target="_blank">Live Demo</a></span>
         </div>
       </div>
 
